<!--
  ~ Copyright (c) 2024 Bear Giles <bgiles@coyotesong.com>.
  ~ All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.coyotesong.examples.spring-boot</groupId>
    <artifactId>release-profile</artifactId>
    <version>0.9</version>
    <packaging>pom</packaging>

    <name>Release Profile</name>
    <description>
        This project contains a profile for release-related maven plugins.
        Its main purpose is to reduce the clutter in the "working" pom.xml
        files by moving much of the routine stuff elsewhere.
    </description>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>coyotesong (Bear Giles)</name>
        <url>https://github.com/coyotesong</url>
    </organization>

    <developers>
        <developer>
            <id>beargiles</id>
            <name>Bear Giles</name>
            <email>bgiles@coyotesong.com</email>
            <url>https://github.com/coyotesong</url>
            <organization>coyotesong</organization>
            <organizationUrl>https://github.com/coyotesong</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>America/Denver</timezone>
        </developer>
    </developers>

    <!-- <issueManagement></issueManagement> -->

    <!-- <distibutionManagement></distributionManagement> -->

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
        <maven-reporting-api.version>3.1.1</maven-reporting-api.version>
        <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>

        <doxia.version>1.11.1</doxia.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${maven-site-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <releaseProfiles>my-release-profile</releaseProfiles>
                </configuration>
            </plugin>

            <!-- TODO - this fails with message that DocumentContent class can't be found! -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.doxia</groupId>
                        <artifactId>doxia-site-renderer</artifactId>
                        <version>${doxia.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.maven.doxia</groupId>
                        <artifactId>doxia-module-markdown</artifactId>
                        <version>${doxia.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>

    </build>

    <profiles>
        <profile>
            <id>javadoc</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>

                        <!-- javadoc can contain markdown instead of html. Still produces html. -->
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <!-- do not use 3.5.1: transitive dependencies of docletArtifact are not added to
                                 docletpath, version 3.5.1 resolves this issue. https://issues.apache.org/jira/browse/MJAVADOC-742 -->
                            <version>3.4.1</version>
                            <executions>
                                <execution>
                                    <id>attach-sources</id>
                                    <goals>
                                        <goal>jar</goal>
                                        <goal>test-jar</goal>
                                    </goals>
                                </execution>
                                <execution>
                                    <id>aggregate</id>
                                    <goals>
                                        <goal>aggregate</goal>
                                    </goals>
                                    <phase>site</phase>
                                    <configuration>
                                        <!-- Specific configuration for the aggregate report -->
                                    </configuration>
                                </execution>
                                <execution>
                                    <id>resource-bundles</id>
                                    <phase>package</phase>
                                    <goals>
                                        <!-- produce source artifact for main project sources -->
                                        <goal>resource-bundle</goal>

                                        <!-- produce source artifact for project test sources -->
                                        <goal>test-resource-bundle</goal>
                                    </goals>
                                    <configuration>
                                        <detectOfflineLinks>false</detectOfflineLinks>
                                    </configuration>
                                </execution>
                            </executions>
                            <configuration>
                                <useStandardDocletOptions>true</useStandardDocletOptions>
                                <doclet>org.jdrupes.mdoclet.MDoclet</doclet>
                                <docletArtifacts>
                                    <docletArtifact>
                                        <groupId>org.jdrupes.mdoclet</groupId>
                                        <artifactId>doclet</artifactId>
                                        <version>4.2.0</version>
                                    </docletArtifact>
                                    <docletArtifact>
                                        <groupId>com.vladsch.flexmark</groupId>
                                        <artifactId>flexmark-all</artifactId>
                                        <version>0.64.8</version>
                                    </docletArtifact>
                                </docletArtifacts>
                                <!--  Note: additionalDependencies are added to the -classpath, not the docletpath -->
                                <additionalDependencies>
                                </additionalDependencies>
                                <additionalJOptions>
                                    <additionalJOption>
                                        -J--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED
                                    </additionalJOption>
                                    <additionalJOption>
                                        -J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
                                    </additionalJOption>
                                    <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED
                                    </additionalJOption>
                                    <additionalJOption>
                                        -J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                                    </additionalJOption>
                                    <additionalJOption>
                                        -J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                                    </additionalJOption>
                                    <additionalJOption>
                                        -J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                                    </additionalJOption>
                                    <additionalJOption>
                                        -J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                                    </additionalJOption>
                                </additionalJOptions>
                                <detectLinks>true</detectLinks>
                                <links>
                                    <link>https://docs.oracle.com/en/java/javase/18/docs/api/</link>
                                    <link>https://docs.oracle.com/en/java/javase/18/docs/api/java.base/</link>
                                    <!-- <link>https://www.jooq.org/javadoc/latest/help-doc.html</link> -->
                                    <link>https://www.jooq.org/javadoc/latest/</link>
                                    <link>https://docs.spring.io/spring-boot/api/java/</link>
                                    <link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>
                                    <!-- <link>https://docs.spring.io/spring-restdocs/docs/current/api/</link> -->
                                    <link>https://javadoc.io/static/org.flywaydb/flyway-core/3.2/</link>
                                    <link>https://googleapis.dev/java/google-api-services-youtube/latest/</link>
                                    <link>https://javadoc.io/doc/com.google.http-client/google-http-client/latest/
                                    </link>
                                    <link>https://javadoc.io/doc/org.testcontainers/testcontainers/latest/</link>
                                    <link>https://javadoc.io/doc/com.zaxxer/HikariCP/latest/com.zaxxer.hikari/</link>
                                    <link>https://logging.apache.org/log4j/2.x/javadoc/log4j-api/</link>
                                    <link>https://logging.apache.org/log4j/2.x/javadoc/log4j-core/</link>
                                </links>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>my-release-profile</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-source-plugin</artifactId>
                            <version>${maven-source-plugin.version}</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>${maven-javadoc-plugin.version}</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-release-plugin</artifactId>
                            <version>${maven-release-plugin.version}</version>
                        </plugin>
                    </plugins>
                </pluginManagement>

                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <!--
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
